--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include ':step01activity2'
 include ':step01example'
 include ':step02listview'
 include ':step03customadapter'
+include ':step04httprequest'
+include ':httprequest'
