--- a/httprequest/src/main/AndroidManifest.xml
+++ b/httprequest/src/main/AndroidManifest.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <!-- 인터넷을 사용하겠다는 허가 얻기 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hello">
-        <activity
-            android:name=".DetailActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.Hello"
+        android:usesCleartextTraffic="true"><!--https가 아닌 http요청을 가능하도록 설정-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
