--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,5 @@ include ':step02listview'
 include ':step03customadapter'
 include ':step04httprequest'
 include ':httprequest'
+include ':step04httprequest2'
+include ':step04example'
